YARG-8 Extract YARG ConsoleRunner into separate module