@@ -17,6 +17,7 @@ def isSnapshot = artifactVersion.endsWith('-SNAPSHOT')
 
 def api = project(':yarg-api')
 def core = project(':yarg')
+def console = project(':yarg-console')
 
 def repositoryUser = System.getenv('HAULMONT_REPOSITORY_USER')
 def repositoryPassword, repositoryUrl, workRepositoryUrl;
@@ -32,7 +33,7 @@ if (repositoryUser) {//for internal users
     workRepositoryUrl = "$repositoryUrl/groups/work"
 }
 
-configure([api, core]) {
+configure([api, core, console]) {
     apply(plugin: 'maven')
     apply(plugin: 'signing')
 
@@ -170,7 +171,6 @@ configure(api) {
 }
 
 configure(core) {
-    apply(plugin: 'application')
 
     assemble {
         new File("result").mkdir();
@@ -182,15 +182,13 @@ configure(core) {
 
     dependencies {
         compile(api)
-        compile(group: 'commons-cli', name: 'commons-cli', version: '1.2')
-        compile(group: 'commons-logging', name: 'commons-logging', version: '1.1.1')
+        compile(group: 'commons-logging', name: 'commons-logging', version: '1.2')
         compile(group: 'commons-lang', name: 'commons-lang', version: '2.6')
-        compile(group: 'commons-io', name: 'commons-io', version: '1.4')
+        compile(group: 'commons-io', name: 'commons-io', version: '2.4')
         compile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
         compile(group: 'dom4j', name: 'dom4j', version: '1.6.1')
-        compile(group: 'log4j', name: 'log4j', version: '1.2.16')
-        compile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.5')
-        compile(group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.5')
+        compile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21')
+        compile(group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.21')
         compile(group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12')
         compile(group: 'antlr', name: 'antlr', version: '2.7.7')
         compile(group: 'asm', name: 'asm', version: '3.3.1')
@@ -201,8 +199,8 @@ configure(core) {
         compile(group: 'org.openoffice', name: 'unoil', version: '3.0.0')
         compile(group: "org.apache.avalon.framework", name: "avalon-framework-api", version: '4.3.1')
         compile(group: "org.apache.avalon.framework", name: "avalon-framework-impl", version: '4.3.1')
-        compile(group: "org.apache.xmlgraphics", name: "fop", version: "1.0")
-        compile(group: "org.apache.xmlgraphics", name: "xmlgraphics-commons", version: "1.5")
+        compile(group: "org.apache.xmlgraphics", name: "fop", version: "2.1")
+        compile(group: "org.apache.xmlgraphics", name: "xmlgraphics-commons", version: "2.1")
         compile(group: "org.plutext", name: "jaxb-svg11", version: "1.0.2")
         compile(group: "org.plutext", name: "jaxb-xslfo", version: "1.0.1")
         compile(group: "org.plutext", name: "jaxb-xmldsig-core", version: "1.0.0")
@@ -224,8 +222,8 @@ configure(core) {
         compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.9') {
             exclude(group: 'org.apache.poi', module: 'poi')
         }
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.0.6')
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.0.6') {
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.5')
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.5') {
             exclude(group: 'org.bouncycastle', module: 'bctsp-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcmail-jdk14')
@@ -233,21 +231,46 @@ configure(core) {
             exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
-        compile(group: "org.docx4j", name: "docx4j", version: "3.3.3") {
+        compile(group: "org.docx4j", name: "docx4j", version: "3.3.5") {
             exclude(group: 'org.apache.poi', module: 'poi')
             exclude(group: 'junit', module: 'junit')
+            exclude(group: 'log4j', module: 'log4j')
+            exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
         }
-        compile(group: "org.docx4j", name: "docx4j-ImportXHTML", version: "3.3.1") {
+        compile(group: "org.docx4j", name: "docx4j-ImportXHTML", version: "3.3.4") {
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'org.apache.poi', module: 'poi')
+            exclude(group: 'log4j', module: 'log4j')
+            exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
         }
-        compile(group: "org.docx4j", name: "docx4j-export-fo", version: "3.3.1") {
+        compile(group: "org.docx4j", name: "docx4j-export-fo", version: "3.3.4") {
             exclude(group: 'junit', module: 'junit')
+            exclude(group: 'log4j', module: 'log4j')
+            exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
         }
         compile(group: "com.jayway.jsonpath", name: "json-path", version: "2.1.0")
 
         testCompile(group: 'junit', name: 'junit', version: '4.5')
         testCompile(group: 'org.hsqldb', name: 'hsqldb', version: '2.3.3')
+        testCompile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
+    }
+
+    test {
+        maxHeapSize = "512m"
+        jvmArgs '-XX:MaxPermSize=256m'
+        workingDir = new File('../..')
+    }
+}
+
+configure(console) {
+    apply(plugin: 'application')
+
+    dependencies {
+        compile(api)
+        compile(core)
+        compile(group: 'commons-cli', name: 'commons-cli', version: '1.2')
+        compile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
+        testCompile(group: 'junit', name: 'junit', version: '4.5')
     }
 
     mainClassName = "com.haulmont.yarg.console.ConsoleRunner"
